--- a/src/layouts/WorkLayout.astro
+++ b/src/layouts/WorkLayout.astro
@@ -26,7 +26,7 @@ const {
 	<div class="bg-base-50 flex h-dvh">
 		<div class="hidden min-[824px]:block">
 			<WorkSidebar
-				client:load
+				client:media="(min-width: 824px)"
 				title={title}
 				description={description}
 				createdDate={createdDate}
@@ -53,7 +53,7 @@ const {
 			>
 			<div class="block min-[824px]:hidden">
 				<InfoDrawer
-					client:load
+					client:media="(max-width: 823px)"
 					title={title}
 					description={description}
 					createdDate={createdDate}
@@ -112,9 +112,8 @@ const {
 	}
 
 	document.addEventListener("astro:page-load", () => {
-		cleanup();
 		init();
 	});
 
-	document.addEventListener("DOMContentLoaded", init);
+	document.addEventListener("astro:before-swap", cleanup);
 </script>
