--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
 import TopBar from "../components/nav/TopBar";
+import { FilterDescription } from "@/components/nav/FilterDescription";
 
 interface Props {
 	title: string;
@@ -17,9 +18,38 @@ const { title, scrollAreaId = "main-scroll", filterCounts } = Astro.props;
 			<TopBar title="Chayut" filterCounts={filterCounts} client:load />
 		</div>
 
-		<div class="h-dvh w-full pt-[112px]">
+		<div
+			class="grid h-dvh w-full grid-rows-[112px_auto_1fr] md:grid-rows-[72px_120px_1fr]"
+		>
+			<div class="row-start-1 px-3"></div>
+			<div class="row-start-2 px-3">
+				<div class="md:hidden">
+					<div
+						class="mx-auto mb-12 grid grid-cols-4 p-3 md:max-w-none md:grid-cols-6 lg:grid-cols-5"
+					>
+						<div class="col-span-3 col-start-2">
+							<FilterDescription
+								className="text-base-700"
+								client:media="(max-width: 767px)"
+							/>
+						</div>
+					</div>
+				</div>
+				<div class="hidden md:block">
+					<div
+						class="mx-auto grid grid-cols-4 p-3 md:grid-cols-6 lg:grid-cols-5"
+					>
+						<div class="col-span-3 col-start-2 md:col-span-3 md:col-start-4">
+							<FilterDescription
+								className="text-base-700 text-xl"
+								client:media="(min-width: 768px)"
+							/>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div
-				class="md:flex md:h-full md:overflow-x-auto md:overflow-y-hidden"
+				class="row-start-3 min-h-0 md:flex md:h-full md:overflow-x-auto md:overflow-y-hidden"
 				id="scroll-container"
 				data-scroll-area-id={scrollAreaId}
 			>
