--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,8 +2,6 @@
 @import "tw-animate-css";
 @plugin "tailwind-clamp";
 
-@custom-variant dark (&:is(.dark *));
-
 @theme inline {
 	--font-sans: var(--font-switzer);
 	--font-cabinet: var(--font-cabinet);
@@ -119,6 +117,18 @@ html {
 	--sidebar-accent-foreground: oklch(0.205 0 0);
 	--sidebar-border: oklch(0.922 0 0);
 	--sidebar-ring: oklch(0.708 0 0);
+
+	--base-50: #f6f6f5;
+	--base-100: #e7e7e6;
+	--base-200: #d1d1d0;
+	--base-300: #b1b0af;
+	--base-400: #8a8a86;
+	--base-500: #6f6f6b;
+	--base-600: #5e5d5c;
+	--base-700: #504f4e;
+	--base-800: #464644;
+	--base-900: #353534;
+	--base-950: #262626;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -200,5 +210,111 @@ html {
 	h3::selection {
 		background-color: var(--color-base-900);
 		color: var(--color-base-50);
+	}
+}
+
+@layer utilities {
+	@media (prefers-color-scheme: dark) {
+		.dark\:bg-base-50 {
+			background-color: var(--base-50);
+		}
+		.dark\:bg-base-100 {
+			background-color: var(--base-100);
+		}
+		.dark\:bg-base-200 {
+			background-color: var(--base-200);
+		}
+		.dark\:bg-base-300 {
+			background-color: var(--base-300);
+		}
+		.dark\:bg-base-400 {
+			background-color: var(--base-400);
+		}
+		.dark\:bg-base-500 {
+			background-color: var(--base-500);
+		}
+		.dark\:bg-base-600 {
+			background-color: var(--base-600);
+		}
+		.dark\:bg-base-700 {
+			background-color: var(--base-700);
+		}
+		.dark\:bg-base-800 {
+			background-color: var(--base-800);
+		}
+		.dark\:bg-base-900 {
+			background-color: var(--base-900);
+		}
+		.dark\:bg-base-950 {
+			background-color: var(--base-950);
+		}
+
+		.dark\:text-base-50 {
+			color: var(--base-50);
+		}
+		.dark\:text-base-100 {
+			color: var(--base-100);
+		}
+		.dark\:text-base-200 {
+			color: var(--base-200);
+		}
+		.dark\:text-base-300 {
+			color: var(--base-300);
+		}
+		.dark\:text-base-400 {
+			color: var(--base-400);
+		}
+		.dark\:text-base-500 {
+			color: var(--base-500);
+		}
+		.dark\:text-base-600 {
+			color: var(--base-600);
+		}
+		.dark\:text-base-700 {
+			color: var(--base-700);
+		}
+		.dark\:text-base-800 {
+			color: var(--base-800);
+		}
+		.dark\:text-base-900 {
+			color: var(--base-900);
+		}
+		.dark\:text-base-950 {
+			color: var(--base-950);
+		}
+
+		.dark\:border-base-50 {
+			border-color: var(--base-50);
+		}
+		.dark\:border-base-100 {
+			border-color: var(--base-100);
+		}
+		.dark\:border-base-200 {
+			border-color: var(--base-200);
+		}
+		.dark\:border-base-300 {
+			border-color: var(--base-300);
+		}
+		.dark\:border-base-400 {
+			border-color: var(--base-400);
+		}
+		.dark\:border-base-500 {
+			border-color: var(--base-500);
+		}
+		.dark\:border-base-600 {
+			border-color: var(--base-600);
+		}
+		.dark\:border-base-700 {
+			border-color: var(--base-700);
+		}
+		.dark\:border-base-800 {
+			border-color: var(--base-800);
+		}
+		.dark\:border-base-900 {
+			border-color: var(--base-900);
+		}
+		.dark\:border-base-950 {
+			border-color: var(--base-950);
+		}
 	}
 }
