--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -52,7 +52,7 @@ const { title, scrollAreaId = "main-scroll", filterCounts } = Astro.props;
 				data-scroll-area-id={scrollAreaId}
 			>
 				<div
-					class="mx-auto flex max-w-[528px] flex-col md:max-w-none md:flex-row"
+					class="mx-auto flex max-w-[528px] flex-col md:mx-0 md:max-w-none md:flex-row"
 				>
 					<slot />
 				</div>
