--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,7 +70,9 @@ const filterName =
 			);
 		})
 	}
-	<CursorFollower client:load />
+	<CursorFollower
+		client:media="(pointer: fine) and (prefers-reduced-motion: no-preference)"
+	/>
 </HomeLayout>
 
 <script>
