--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import HomeLayout from "@/layouts/HomeLayout.astro";
 import { getCollection } from "astro:content";
 import type { ContentTypeId, FilterType } from "@/lib/content-types";
 import { AVAILABLE_FILTERS, getDefinitionById } from "@/lib/content-types";
+import CursorFollower from "@/components/ui/cursor-follower";
 
 const works = await getCollection("works");
 
@@ -69,6 +70,9 @@ const filterName =
 			);
 		})
 	}
+	<CursorFollower
+		client:media="(pointer: fine) and (prefers-reduced-motion: no-preference)"
+	/>
 </HomeLayout>
 
 <script>
