--- a/src/components/widgets/VideoWidget.astro
+++ b/src/components/widgets/VideoWidget.astro
@@ -1,6 +1,7 @@
 ---
 import Badge from "@/components/Badge.astro";
 import Widget from "@/components/widgets/Widget.astro";
+import { toCssHeight } from "@/lib/utils";
 import { getCldVideoUrl } from "astro-cloudinary/helpers";
 
 interface Props {
@@ -10,22 +11,47 @@ interface Props {
 	poster?: string;
 	types?: string[];
 	id?: string;
+	height?: string | number;
+	position?: "top" | "bottom";
 	[key: string]: any;
 }
 
-const { title, video, description, poster, types, id, ...rest } = Astro.props;
+const {
+	title,
+	video,
+	description,
+	poster,
+	types,
+	id,
+	height,
+	position,
+	...rest
+} = Astro.props;
 
 const videoUrl = getCldVideoUrl({ src: video });
+
+const mediaHeightCss = toCssHeight(height);
+const mediaWrapperStyle = `--media-h:${mediaHeightCss};`;
+const containerJustifyClass =
+	position === "bottom"
+		? "md:justify-end"
+		: position === "top"
+			? "md:justify-start"
+			: "";
 ---
 
 <Widget
 	class:list={[
-		"flex max-w-[528px] flex-col gap-3 p-6 md:max-w-none md:justify-between",
+		"flex max-w-[528px] flex-col gap-3 p-6 md:max-w-none",
+		containerJustifyClass,
 		"mb-12 md:mb-0",
 	]}
 	{...rest}
 >
-	<div class="w-full md:h-2/3 md:min-h-[300px]">
+	<div
+		class:list={["w-full md:h-[var(--media-h)] md:min-h-[300px]"]}
+		style={mediaWrapperStyle}
+	>
 		<a
 			href={id ? `/work/${encodeURIComponent(id)}/` : undefined}
 			class="block md:h-full md:w-full"
