--- a/src/pages/work/[slug].astro
+++ b/src/pages/work/[slug].astro
@@ -32,6 +32,7 @@ if (key in interactiveModules) {
 	lastUpdatedDate={entry.data.lastUpdatedDate.toISOString()}
 	types={entry.data.types || []}
 	disableSidebarClickOutside={entry.data.disableSidebarClickOutside}
+	floatingSidebar={entry.data.floatingSidebar}
 >
 	{ComponentToRender && <ComponentToRender slot="interactive" />}
 	<Content />
